@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.eclipse.jetty.http2</groupId>
     <artifactId>http2-parent</artifactId>
-    <version>10.0.14-SNAPSHOT</version>
+    <version>10.0.15-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -22,6 +22,7 @@
           <argLine>
             @{argLine} ${jetty.surefire.argLine}
             --add-reads org.eclipse.jetty.http2.client=org.eclipse.jetty.http2.hpack
+            --add-reads org.eclipse.jetty.http2.client=org.eclipse.jetty.logging
           </argLine>
         </configuration>
       </plugin>
